--- a/README
+++ b/README
@@ -103,12 +103,9 @@ You can check the build options using `sydbox --version`:
 
 ```
 $ sydbox --version
-sydbox-1.1.0-pandora-0.0.3-1-gc96f237 (pinktrace-0.9.5 git:v0.9.5-1-ge6ac27f)
-Options: dump:yes seccomp:yes ipv6:yes netlink:yes
+sydbox-2.0.1
+Options: dump:yes seccomp:no ipv6:yes netlink:yes
 ```
-
-- **seccomp:yes** indicates **--enable-seccomp** was passed on build.
-- **ipv6:yes** **IPv6 Network Sandboxing** is enabled.
 
 # Pandora
 
