--- a/README
+++ b/README
@@ -78,15 +78,18 @@ parts which are of particular interest to read are:
 **NOTE:** Pandora is in its early stages of development. To be able to use Pandora
 you need **Sydbox-2.0.1** or later.
 
-- Tar: https://dev.exherbo.org/~alip/sydbox/sydbox-2.0.1.tar.bz2
-- SHA: https://dev.exherbo.org/~alip/sydbox/sydbox-2.0.1.tar.bz2.sha1sum
-- GPG: https://dev.exherbo.org/~alip/sydbox/sydbox-2.0.1.tar.bz2.sha1sum.asc
-- Git: https://git.exherbo.org/git/sydbox-1.git
+|  .  | @                                                                       |
+|-----|:------------------------------------------------------------------------|
+| Tar | https://dev.exherbo.org/~alip/sydbox/sydbox-2.0.1.tar.bz2               |
+| SHA | https://dev.exherbo.org/~alip/sydbox/sydbox-2.0.1.tar.bz2.sha1sum       |
+| GPG | https://dev.exherbo.org/~alip/sydbox/sydbox-2.0.1.tar.bz2.sha1sum.asc   |
+| Git | https://git.exherbo.org/git/sydbox-1.git                                |
+| Ann | https://pink.exherbo.org/sydbox-v2.0.1/                                 |
 
 - Browse: https://git.exherbo.org/sydbox-1.git/
 - Exheres:
   - [sydbox.exlib](https://git.exherbo.org/arbor.git/tree/packages/sys-apps/sydbox/sydbox.exlib)
-  - [sydbox-scm.exheres-0](https://git.exherbo.org/arbor.git/tree/packages/sys-apps/sydbox/sydbox-scm.exheres-0)
+  - [sydbox-2.0.1.exheres-0](https://git.exherbo.org/arbor.git/tree/packages/sys-apps/sydbox/sydbox-2.0.1.exheres-0)
 
 You can check the build options using `sydbox --version`:
 
