--- a/README
+++ b/README
@@ -100,6 +100,50 @@ discovered and consensus on a better solution is reached."
 SydBox is a [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based
 sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process
 access to filesystem and network resources.
+SydBox is a [seccomp-bpf] &amp;
+[seccomp-notify](http://man7.org/linux/man-pages/man2/seccomp.2.html) based
+sandbox for modern Linux machines to sandbox unwanted process access to
+file system and network resources.
+
+SydBox requires **no root access** and
+**no [ptrace](https://man7.org/linux/man-pages/man2/ptrace.2.html)** rights.
+They don't depend on any specific Linux kernel option to function.
+The only dependency is libseccomp which is available on many different architectures,
+including x86, x86\_64, x32, arm, aarch64, mips, mips64...
+
+This makes it very easy for a regular user to use. This is the motto
+of SydBox: **bring easy, simple, flexible and powerful security to the
+Linux user!**
+
+The basic idea of SydBox is to run a command under certain restrictions.
+These restrictions define which system calls the command is permitted to run and which argument
+values are permitted for the given system call. The restrictions may be applied via two ways.
+[seccomp-bpf](https://man7.org/linux/man-pages/man2/seccomp.2.html) can be used to apply
+simple Secure Computing user filters to run sandboxing fully on kernel space,
+and [seccomp-notify](https://man7.org/linux/man-pages/man2/seccomp.2.html) functionality can
+be used to run sandboxing on kernel space and fallback to user space to dereference pointer
+arguments of system calls -- which are one of
+[pathname](https://en.wikipedia.org/wiki/Path_(computing)),
+[UNIX socket address](https://en.wikipedia.org/wiki/Unix_domain_socket),
+[IPv4](https://en.wikipedia.org/wiki/IPv4) or
+[IPv6](https://en.wikipedia.org/wiki/IPv6)
+network address -- and make dynamic decisions
+using `rsync`-like [wildcards](https://en.wikipedia.org/wiki/Wildcard_character)
+such as `allowlist/write+/home/sydbox/***`, or
+`allowlist/write+/run/user/*/pulse`
+for [pathnames](https://en.wikipedia.org/wiki/Path_(computing)),
+and using
+[CIDR](https://en.wikipedia.org/wiki/Classless_Inter-Domain_Routing)
+notation such as
+`allowlist/network/connect+inet:127.0.0.1/8@9050`, or
+`allowlist/network/connect+inet6:::1/8@9050`
+for
+[IPv4](https://en.wikipedia.org/wiki/IPv4) and
+[IPv6](https://en.wikipedia.org/wiki/IPv6) addresses
+and perform an action which is by default denying the system call with an
+appropriate error -- which is usually **permission denied** -- or
+kill the process running the system call, or kill all processes at once
+with [**SIGKILL**](https://en.wikipedia.org/wiki/Signal_(IPC)#SIGKILL).
 
 See: https://sydbox.exherbo.org
 
