--- a/TODO
+++ b/TODO
@@ -1,5 +1,10 @@
 # Sydbox
 
+implement basic system call name filters such that:
+	- whitelist/syscall+<regex-for-syscall-name>
+	- blacklist/syscall+<regex-for-syscall-name>
+is possible in config.
+
 ## BUILD FAILURES
 # Thanks a lot justinkb
 
