--- a/README
+++ b/README
@@ -260,62 +260,62 @@ commands are permitted.
 Here's a list of `pandora sandbox` commands:
 
 ### Querying sandbox status
-- `pandora sandbox check`: Check whether the program is being executed under
+- `check`: Check whether the program is being executed under
   sandboxing.
-- `pandora sandbox enabled` or `pandora sandbox enabled_path`: Check whether path
+- `enabled` or `enabled_path`: Check whether path
   sandboxing is enabled.
-- `pandora sandbox enabled_exec`: Check whether exec sandboxing is enabled.
-- `pandora sandbox enabled_net`: Check whether network sandboxing is enabled.
+- `enabled_exec`: Check whether exec sandboxing is enabled.
+- `enabled_net`: Check whether network sandboxing is enabled.
 
 ### Turning sandboxing on/off
-- `pandora sandbox enable` or `pandora sandbox enable_path`: Enable path sandboxing.
-- `pandora sandbox disable` or `pandora sandbox disable_path`: Disable path sandboxing.
-- `pandora sandbox enable_exec`: Enable exec sandboxing.
-- `pandora sandbox disable_exec`: Disable exec sandboxing.
-- `pandora sandbox enable_net`: Enable network sandboxing.
-- `pandora sandbox disable_net`: Disable network sandboxing.
+- `enable` or `enable_path`: Enable path sandboxing.
+- `disable` or `disable_path`: Disable path sandboxing.
+- `enable_exec`: Enable exec sandboxing.
+- `disable_exec`: Disable exec sandboxing.
+- `enable_net`: Enable network sandboxing.
+- `disable_net`: Disable network sandboxing.
 
 #### Whitelisting
-- `pandora sandbox allow` or `pandora sandbox allow_path`: Whitelist a path for path
+- `allow` or `allow_path`: Whitelist a path for path
   sandboxing.  Takes one extra argument which must be an __absolute__ path.
-- `pandora sandbox disallow` or `pandora sandbox disallow_path`: Removes a path from
+- `disallow` or `disallow_path`: Removes a path from
   the path sandboxing whitelist. Takes one extra argument which must be an
   __absolute__ path.
-- `pandora sandbox allow_exec`: Whitelist a path for `execve()` sandboxing.  Takes
+- `allow_exec`: Whitelist a path for `execve()` sandboxing.  Takes
   one extra argument which must be an __absolute__ path.
-- `pandora sandbox disallow_exec`: Removes a path from the `execve()` sandboxing whitelist.
+- `disallow_exec`: Removes a path from the `execve()` sandboxing whitelist.
 Takes one extra argument which must be an __absolute__ path.
-- `pandora sandbox allow_net`: Whitelist a network address for `bind()` whitelist -
+- `allow_net`: Whitelist a network address for `bind()` whitelist -
   or for `connect()` whitelist if _--connect_ option is given.
-- `pandora sandbox disallow_net`: Removes a network address from the `bind()`
+- `disallow_net`: Removes a network address from the `bind()`
   whitelist - or from `connect()` whitelist if _--connect_ option is given.
 
 #### Filtering
-- `pandora sandbox addfilter` or `pandora sandbox addfilter_path`: Add a pattern as
+- `addfilter` or `addfilter_path`: Add a pattern as
   a path sandboxing filter. Takes one extra argument which is a `fnmatch()` pattern.
-- `pandora sandbox rmfilter` or `pandora sandbox rmfilter_path`: Removes a pattern
+- `rmfilter` or `rmfilter_path`: Removes a pattern
   from the path sandboxing filter list. Takes one extra argument which is a
   `fnmatch()` pattern.
-- `pandora sandbox addfilter_exec`: Add a pattern as a `execve()` sandboxing filter.
+- `addfilter_exec`: Add a pattern as a `execve()` sandboxing filter.
   Takes one extra argument which is a `fnmatch()` pattern.
-- `pandora sandbox rmfilter_exec`: Removes a pattern from the `execve()` sandboxing
+- `rmfilter_exec`: Removes a pattern from the `execve()` sandboxing
   filter list. Takes one extra argument which is a `fnmatch()` pattern.
-- `pandora sandbox addfilter_net`: Add a network address as a network sandboxing
+- `addfilter_net`: Add a network address as a network sandboxing
   filter.  Takes one extra argument which is a network address.
-- `pandora sandbox rmfilter_net`: Removes a pattern from the network sandboxing
+- `rmfilter_net`: Removes a pattern from the network sandboxing
   filter list. Takes one extra argument which is a network address.
 
 #### Miscellaneous commands
-- `pandora sandbox lock`: Lock magic commands. After calling this none of the
-  `pandora sandbox` commands will work. You don't need to call this, see
+- `lock`: Lock magic commands. After calling this none of the
+  `sandbox` commands will work. You don't need to call this, see
   `exec_lock`.
-- `pandora sandbox exec_lock`: Lock magic commands upon `execve()`.
-- `pandora sandbox wait_eldest`: By default, sydbox waits for all traced processes
+- `exec_lock`: Lock magic commands upon `execve()`.
+- `wait_eldest`: By default, sydbox waits for all traced processes
   to exit before exiting. However, this isn't desired in some cases. For example
   when a daemon, like udev, is restarted from within an exheres which will go on its
   execution after installation. This command makes sydbox resume all processes and
   exit after the eldest process has exited.
-- `pandora sandbox wait_all`: Wait for all processes before exiting. This is the
+- `wait_all`: Wait for all processes before exiting. This is the
   default.
 
 ### Specifying Network Addresses
