--- a/bench/2021.06.13-paludis-seccomp-user-notify.md
+++ b/bench/2021.06.13-paludis-seccomp-user-notify.md
@@ -10,7 +10,7 @@ and the responses about system call actions are sent via
 # Setup
 
 We compile Paludis, the package manager of the Exherbo Linux distribution,
-under old, new SydBox and without SydBox. Paludis is built from Git.
+under old, new SydB☮x and without SydB☮x. Paludis is built from Git.
 See detailed information below about options. Things to note are recommended
 tests are disabled and the installation happens two-fold where `tahta` is
 a simple binary `pbin` repository.
@@ -230,10 +230,10 @@ sys     2m26.128s
 When we compare the `src_compile` of a Paludis build with
 sydbox-1.git and sydbox-1.2.1 under strace we notice the differences in
 system call usage clearly. Below is a filtered group of system calls which
-are core to tracing functionality. SydBox.git has more variety in the number
-of system calls they use. In total SydBox-1.2.1 calls 44301311 system calls.
+are core to tracing functionality. SydB☮x.git has more variety in the number
+of system calls they use. In total SydB☮x-1.2.1 calls 44301311 system calls.
 28% of these system calls is `ptrace()` which is an expensive system
-call. Meanwhile, SydBox.git calls 3117293, which is a considerable
+call. Meanwhile, SydB☮x.git calls 3117293, which is a considerable
 decrease in the number of total calls, omitting `ptrace()`, replacing it
 with `seccomp()` and `ioctl()`.
 
