--- a/README
+++ b/README
@@ -54,7 +54,7 @@ discovered and consensus on a better solution is reached."
 <a href="https://sydbox.exherbo.org">
 <img
     src="https://dev.exherbo.org/~alip/images/sydbox160.png"
-    alt="SydBox"
+    alt="SydB☮x"
     title="That cat's something I can't explain!"
     style="border: 0px; margin: 0px"
 /></a></td>
@@ -97,11 +97,11 @@ discovered and consensus on a better solution is reached."
 </td></tr>
 </tr></table>
 
-SydBox is a [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based
+SydB☮x is a [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based
 sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process
 access to filesystem and network resources.
 
-SydBox requires **no root access** and
+SydB☮x requires **no root access** and
 **no [ptrace](https://man7.org/linux/man-pages/man2/ptrace.2.html)** rights.
 They don't depend on any specific Linux kernel option to function.
 The only dependency is [libseccomp](https://github.com/seccomp/libseccomp)
@@ -109,10 +109,10 @@ which is available on many different architectures,
 including x86, x86\_64, x32, arm, aarch64, mips, mips64...
 
 This makes it very easy for a regular user to use. This is the motto
-of SydBox: **bring easy, simple, flexible and powerful security to the
+of SydB☮x: **bring easy, simple, flexible and powerful security to the
 Linux user!**
 
-The basic idea of SydBox is to run a command under certain restrictions.
+The basic idea of SydB☮x is to run a command under certain restrictions.
 These restrictions define which system calls the command is permitted to run and which argument
 values are permitted for the given system call. The restrictions may be applied via two ways.
 [seccomp-bpf](https://man7.org/linux/man-pages/man2/seccomp.2.html) can be used to apply
@@ -152,15 +152,15 @@ For updates, check out my blog at https://pink.exherbo.org
 
 ## Build &amp; Requirements
 
-SydBox uses autotools and cargo. To build, simply do `./configure`, `make`, `make -j check`
+SydB☮x uses autotools and cargo. To build, simply do `./configure`, `make`, `make -j check`
 and `sudo make install`. Make sure you have `cargo` and `cbindgen` under `PATH`.
-By default this will produce a statically linked *SydBox* binary.
+By default this will produce a statically linked *SydB☮x* binary.
 If you want use dynamic linking, give the `--disable-static` option to `./configure`.
 
 Make sure you have `xsltproc` under `PATH` if you want to build the manual page.
 You may also browse the manual of the latest version at https://sydbox.exherbo.org.
 
-To use SydBox you need a [Linux](https://kernel.org) kernel with version 5.6 or
+To use SydB☮x you need a [Linux](https://kernel.org) kernel with version 5.6 or
 newer which includes [the secure computing mode](https://en.wikipedia.org/wiki/Seccomp)
 with the `SECCOMP_USER_NOTIF_FLAG_CONTINUE` facility,
 and the system calls
@@ -168,11 +168,11 @@ and the system calls
 and [pidfd_getfd](https://man7.org/linux/man-pages/man2/pidfd_getfd.2.html).
 
 In addition, it is recommended that you enable the kernel option
-`CONFIG_CROSS_MEMORY_ATTACH` so that SydBox can use the system calls
+`CONFIG_CROSS_MEMORY_ATTACH` so that SydB☮x can use the system calls
 [process_vm_readv](https://man7.org/linux/man-pages/man2/process_vm_readv.2.html)
 and
 [process_vm_writev](https://man7.org/linux/man-pages/man2/process_vm_readv.2.html).
-These system calls are available in Linux since 3.2. Note SydBox will use the file
+These system calls are available in Linux since 3.2. Note SydB☮x will use the file
 `/proc/pid/mem` if these system calls are unavailable or not working so this is
 not a hard dependency.
 
@@ -186,7 +186,7 @@ For more information about these requirements, check the following links:
 
 ## Sandboxing
 
-See the [SydBox manual
+See the [SydB☮x manual
 page](https://dev.exherbo.org/~alip/sydbox/sydbox.html) on more information about
 [secure computing mode](https://en.wikipedia.org/wiki/Seccomp) protections. The
 parts which are of particular interest to read are:
@@ -197,10 +197,10 @@ parts which are of particular interest to read are:
 - [core/restrict/memory_map](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-restrict-mmap)
 - [core/restrict/shared_memory_writable](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-restrict-shm-wr)
 
-## SydBox &amp; Pandora
+## SydB☮x &amp; Pand☮ra
 
-**NOTE:** Pandora is in its early stages of development. To be able to use Pandora
-you need **Sydbox-2.2.0** or later.
+**NOTE:** Pand☮ra is in its early stages of development. To be able to use Pand☮ra
+you need **Sydb☮x-2.2.0** or later.
 
 |  .  | @                                                                       |
 |-----|:------------------------------------------------------------------------|
@@ -223,7 +223,7 @@ sydbox-2.2.0
 Options: dump:yes seccomp:yes ipv6:yes netlink:yes
 ```
 
-To see if your system is supported by **SydBox**, use `sydbox ---test`:
+To see if your system is supported by **SydB☮x**, use `sydbox ---test`:
 
 ```
 $ sydbox --test
@@ -233,29 +233,29 @@ sydbox: [*] cross memory attach is functional.
 sydbox: [*] /proc/pid/mem interface is functional.
 sydbox: [*] pidfd interface is functional.
 sydbox: [*] seccomp filters are functional.
-sydbox: [>] SydBox is supported on this system!
+sydbox: [>] SydB☮x is supported on this system!
 ```
 
-To verify **SydBox** is working correctly, either use `make -j check` during
+To verify **SydB☮x** is working correctly, either use `make -j check` during
 installation or use the helper utility `syd-test` to run the installed tests.
 
-# Pandora
+# Pand☮ra
 
 https://pandora.exherbo.org
 
-Pandora's Box: A helper for SydBox, a ptrace & seccomp based sandbox to make sandboxing practical.
+Pand☮ra's Box: A helper for SydB☮x, a ptrace & seccomp based sandbox to make sandboxing practical.
 This makes it easy for the end user to use secure computing for practical purposes.
 
 ## pandora sandbox
 
-SydBox may be configured through the magic path `/dev/sydbox` which is a virtual
+SydB☮x may be configured through the magic path `/dev/sydbox` which is a virtual
 path that exists solely for inter-process communication with the sandbox to
 configure and extend it. [In
 Exherbo](https://exherbo.org/docs/eapi/exheres-for-smarties.html#magic_commands), we
 have the command `esandbox` to interface with the sandbox. The subcommand
 `pandora sandbox` provides the exact same interface.
 
-**Note**: `pandora sandbox` works as long as the magic lock of Sydbox is not
+**Note**: `pandora sandbox` works as long as the magic lock of Sydb☮x is not
 locked either via the magic command `core/trace/magic_lock:on` or via the
 command-line option `--lock`. You may also lock the magic command using
 `pandora` with `pandora sandbox lock` after which no more sandboxing
@@ -351,12 +351,12 @@ So you may use LOOPBACK@0 instead of inet:127.0.0.0/8@0
 
 ## Example 1: Restricted Login Shell
 
-When run without arguments Sydbox drops into a restricted login shell.  This is the
-default sandboxing profile installed by Sydbox and may also be used as basic config
+When run without arguments Sydb☮x drops into a restricted login shell.  This is the
+default sandboxing profile installed by Sydb☮x and may also be used as basic config
 for other applications. It's installed under `$sharedir/sydbox/default.syd-2` where
 `$sharedir` is usually `/usr/share`.
 
-**Note**: By default, Sydbox allows interacting with the sandbox. Try with
+**Note**: By default, Sydb☮x allows interacting with the sandbox. Try with
 `syd --lock` to disable this for a more real jail experience. Note in this
 mode `/dev/sydbox` is inaccessible.
 
@@ -409,7 +409,7 @@ Enable, disable additional options or turn paths into wildcards such as
 `/home/***` to allow home and everything beyond /home
 the usual glob characters, `?, *` are supported.
 
-Check [SydBox manual page](https://dev.exherbo.org/~alip/sydbox/sydbox.html#pattern-matching) to
+Check [SydB☮x manual page](https://dev.exherbo.org/~alip/sydbox/sydbox.html#pattern-matching) to
 learn more on how **PATTERN MATCHING** works.
 
 Enable, disable additional network addresses unless you're using a **SOCKS5 proxy**
@@ -419,7 +419,7 @@ which does remote DNS lookups, e.g:
 
 for [Tor](https://www.torproject.org/).
 
-Check [SydBox manual page](https://dev.exherbo.org/~alip/sydbox/sydbox.html#address-matching) to
+Check [SydB☮x manual page](https://dev.exherbo.org/~alip/sydbox/sydbox.html#address-matching) to
 learn more on how **ADDRESS MATCHING** works.
 
 ```
@@ -427,7 +427,7 @@ $ pandora box -c out.syd-2 firefox
 ```
 
 - Run the browser under secure computing with full protection.
-- Check [SydBox manual page for a list of system call
+- Check [SydB☮x manual page for a list of system call
   protections.](https://dev.exherbo.org/~alip/sydbox/sydbox.html#sandboxing)
 - Check the console for possible access violations over time.
 
@@ -471,10 +471,10 @@ https://git.exherbo.org/sydbox-1.git/plain/data/firefox.syd-2
 
 # PinkTrace
 
-If you do not have a very recent Linux version, you may use Sydbox-1.2.1 which
+If you do not have a very recent Linux version, you may use Sydb☮x-1.2.1 which
 requires [Pink's Tracing Library](http://dev.exherbo.org/~alip/pinktrace/api/c/)
 
-**NOTE: SydBox-2.0.1 and newer do not use ptrace() but use seccomp user notify
+**NOTE: SydB☮x-2.0.1 and newer do not use ptrace() but use seccomp user notify
 facilities in recent Linux kernels 5.6 and newer. Hence, PinkTrace is no longer a
 dependency.**
 
@@ -518,16 +518,16 @@ request there. **Attaching poems encourages consideration tremendously.**
 
 # Documentation
 
-Read the fine manual of [SydBox](https://dev.exherbo.org/~alip/sydbox/sydbox.html) and [SydFmt](https://dev.exherbo.org/~alip/sydbox/sydfmt.html).
+Read the fine manual of [SydB☮x](https://dev.exherbo.org/~alip/sydbox/sydbox.html) and [SydFmt](https://dev.exherbo.org/~alip/sydbox/sydfmt.html).
 
 # Blog Posts
 
-* [Sydbox: Stop Skype P2P/Call Home: People Have The Right To Communicate W\o Eavesdropping](https://tinyurl.com/sydbox-stop-skype-call-home)
+* [Sydb☮x: Stop Skype P2P/Call Home: People Have The Right To Communicate W\o Eavesdropping](https://tinyurl.com/sydbox-stop-skype-call-home)
 * [Recent Linux Changes Help Safe & Secure w\o Root](https://tinyurl.com/recent-linux-changes-help-safe)
-* [A Study in Sydbox](https://tinyurl.com/a-study-in-sydbox)
+* [A Study in Sydb☮x](https://tinyurl.com/a-study-in-sydbox)
 * [Pink's Tracing Library](https://tinyurl.com/pink-s-tracing-library)
-* [Sydbox Logo Survey](https://tinyurl.com/sydbox-logo-survey)
-* [Sydbox: Default Sandbox of Exherbo](https://tinyurl.com/sydbox-default-sandbox-exherbo)
+* [Sydb☮x Logo Survey](https://tinyurl.com/sydbox-logo-survey)
+* [Sydb☮x: Default Sandbox of Exherbo](https://tinyurl.com/sydbox-default-sandbox-exherbo)
 * [Disabling External Commands in Metadata Phase (Exherbo&gt;Gentoo)](https://tinyurl.com/no-commands-in-metadata-phase)
 * [ptrace on IA64](https://tinyurl.com/ptrace-on-ia64)
 * [Network Sandboxing and /proc (Exherbo&gt;Gentoo)](https://tinyurl.com/network-sandboxing-and-proc)
