--- a/README
+++ b/README
@@ -101,6 +101,9 @@ SydB☮x is a [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) bas
 sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process
 access to filesystem and network resources.
 
+- sydB☮x written in portable C and licensed GPLv2.
+- libsyd is written in portable C and licensed GPLv2.
+
 SydB☮x requires **no root access** and
 **no [ptrace](https://man7.org/linux/man-pages/man2/ptrace.2.html)** rights.
 They don't depend on any specific Linux kernel option to function.
